<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">车粒子</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_a2ctivity">MainA2ctivity</string>
    <string name="test_open">芝麻开门</string>
    <string name="test_close">芝麻关门</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand_service">品牌服务</string>
    <string name="your_collect">为您推荐</string>
    <string name="brand">品牌</string>
    <string name="clain">连锁</string>
    <string name="order_service">我要洗车</string>
    <string name="title_activity_order_service">OrderServiceActivity</string>
    <string name="time">时间</string>
    <string name="price">价格</string>
    <string name="discount">折扣</string>
    <string name="model">车型</string>
    <string name="Formal">正式服&#058;</string>
    <string name="title_activity_merchant_detail">MerchantDetailActivity</string>
    <string name="title_activity_map_navigation">MapNavigationActivity</string>
    <string name="check_all">全选</string>
    <string name="confirm">确定</string>
    <string name="title_activity_baidu_location">BaiduLocationActivity</string>
    <string name="title_activity_test_base_map_">Test_base_map_Activity</string>
    <string name="title_activity_map_search">MapSearchActivity</string>
    <string name="title_activity_brand_service">BrandServiceActivity</string>
    <string name="maintenance">保养</string>
    <string name="beauty">美容</string>
    <string name="repair">维修</string>
    <string name="road_service">救援</string>
    <string name="order">下订单</string>
    <string name="login">登录</string>
    <string name="change_psw">修改密码</string>
    <string name="original_psw">原始密码</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw_again">确认新密码</string>
    <string name="register">注册</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="identifying_code">验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="gender">性别&#058;</string>
    <string name="license_plate_number">车牌号&#058;</string>
    <string name="car_model">车型&#058;</string>
    <string name="password">密码&#058;</string>
    <string name="confirm_password">确认密码</string>
    <string name="app_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;众行远网络科技有限公司，联系电话：15928079540\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="search">搜索</string>
    <string name="go_there">到这去</string>
    <string name="search_near">搜周边</string>
    <string name="near">周边</string>
    <string name="phone">电话</string>
    <string name="detail">详情</string>
    <string name="title_activity_brand_detail">BrandDetailActivity</string>
    <string name="post">转发</string>
    <string name="top">赞</string>
    <string name="points">积分&#058;</string>
    <string name="logout">退出登录</string>
    <string name="inputEmailAddress">请输入您注册的邮箱地址：</string>
    <string name="emailAddress">邮箱地址</string>
    <string name="sendRequest">发送请求</string>
    <string name="complete_personal_info">完善个人信息</string>
    <string name="merchant">商家</string>
    <string name="service">服务</string>
    <string name="my_order">我的订单</string>
    <string name="comment">评价</string>
    <string name="cancel_order">取消订单</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="button_login">登录</string>
    <string name="title_activity_login">登录</string>
    <string name="text_forget">忘记密码</string>
    <string name="password_confirm">密码确认</string>
    <string name="title_activity_register">注册</string>
    <string name="text_register">注册新用户</string>
    <string name="file_not_exist">文件不存在或者再文件夹中存在同名文件</string>

    <!-- 分享String -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="title_activity_test">TESTActivity</string>
    <string name="title_activity_brands">BrandsActivity</string>
    <string name="title_activity_service_type">ServiceTypeActivity</string>
    <string name="title_activity_change_psw">ChangePSWActivity</string>
    <string name="net_error">您的网络出错啦！</string>
    <string name="please_input">请输入正确的授权Key！</string>
    <string name="gps_not_available">你的GPS定位服务暂时不可用</string>
    <string name="more">加载更多</string>
    <string name="dropToRefresh">下拉刷新</string>
    <string name="lastUpdate">上次更新</string>
    <string name="refresh">松开刷新</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="lastest_update">最近更新&#058;</string>
    <string name="show_more">更多</string>
    <string name="loading">载入中</string>
    <string name="need_sd">需要SD卡&#033;</string>
    <string name="connection_error">连接错误&#033;稍后再试&#033;</string>
    <string name="saved_to">保存至</string>
    <string name="can_not_recongnize">无法自动识别文件&#044;请手动打开</string>
    <string name="visit_later">服务器维护中&#044;请稍后访问&#044;谢谢&#033;</string>
    <string name="maintenance_notification">维护通知</string>
    <string name="vis_later">稍后访问</string>
    <string name="no_more">没有更多了</string>
    <string name="net_abnormal">网络异常，无法获取数据！</string>
    <string name="no">暂无数据</string>
    <string name="not_repeat">不能重复收藏</string>
    <string name="post_follow_success">收藏成功</string>
    <string name="post_follow_fail">收藏失败</string>
    <string name="net_connect_time_out">网络连接超时，请稍后重试!</string>
    <string name="please_log">请先登录</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="title_activity_discounts">DiscountsActivity</string>
    <string name="xinhua_descript">&#160;&#160;&#160;&#160;移动信息客户端软件(V1.0)\n&#160;&#160;&#160;&#160;众行远网络科技有限公司</string>
    <!-- xinzhi end -->
    <string name="app_version">移动信息客户端软件(V1.0)</string>
    <string name="app_copyright">Copyright © 2014 众行远网络科技有限公司 版权所有</string>

</resources>