<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layout_main_activity_header_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/activity_title" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="用户登录"
            android:textColor="@color/font_black"
            android:textSize="@dimen/text_size_title_bar_title" />

        <ImageView
            android:id="@+id/btn_merchant_detail_activity_back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="clickCallback"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_main_activity_header_bar"
        android:background="@drawable/bg_personal_info_top"
        android:paddingBottom="10dp" >

        <ImageView
            android:id="@+id/img_personal_info_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/img_personal_info_avatar" />
    </RelativeLayout>

    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phone"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_btn_personal_info_logout"
            android:onClick="loginListener"
            android:padding="10dp"
            android:text="@string/title_activity_login"
            android:textColor="@color/font_white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/go_register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="GoRegisterListener"
            android:text="@string/text_register"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/go_forget_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="GoForgetListener"
            android:text="@string/text_forget"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>