<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layout_main_activity_header_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/activity_title" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="用户注册"
            android:textColor="@color/font_black"
            android:textSize="@dimen/text_size_title_bar_title" />

        <ImageView
            android:id="@+id/btn_merchant_detail_activity_back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="clickCallback"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_main_activity_header_bar"
        android:background="@drawable/bg_personal_info_top"
        android:paddingBottom="10dp" >

        <ImageView
            android:id="@+id/img_personal_info_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/img_personal_info_avatar" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password_confirm"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector_btn_personal_info_logout"
                android:gravity="center"
                android:onClick="RegisterListener"
                android:padding="10dp"
                android:text="@string/title_activity_register"
                android:textColor="@color/font_white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>